# proton-agent-suite

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: apple-calendar.md  architecture.md  cli-reference.md  deployment-vps.md  radicale.md  threat-model.md  troubleshooting.md
skills/proton-agent-suite/: SKILL.md  manifest.txt
skills/proton-agent-suite/examples/: smoke_test.md
skills/proton-agent-suite/tasks/: calendar_and_connector.md  deployment_and_security.md  invites.md  mail_workflows.md  setup_and_validation.md  sync_and_agent_polling.md
skills/proton-agent-suite/troubleshooting/: common.md
src/proton_agent_suite/: main.py
src/proton_agent_suite/cli/: agent.py  app.py  calendar.py  config.py  diagnostics.py  invites.py  mail.py  sync.py
src/proton_agent_suite/domain/: enums.py  errors.py  models.py  protocols.py  value_objects.py
src/proton_agent_suite/security/: credentials.py  permissions.py  redaction.py
src/proton_agent_suite/storage/: db.py  migrations.py  schema.py
src/proton_agent_suite/utils/: fs.py  ids.py  json_output.py  logging.py  retries.py  time.py
tests/: conftest.py
tests/e2e/: test_cli_json.py
tests/fixtures/bridge/: folders.json
tests/fixtures/ics/: canceled_invite.ics  forwarded_invite.ics  new_invite.ics  radicale_event.ics  recurring_with_exception.ics  updated_invite.ics
tests/integration/: test_repositories.py
tests/unit/: test_invite_workflows.py  test_invites.py  test_mail_provider.py  test_mail_service.py  test_migrations.py  test_radicale_provider.py  test_recurrence.py
(+31 files in other folders)
