[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proton-agent-suite"
version = "0.1.0"
description = "Local-first CLI suite for Proton Mail Bridge and self-hosted CalDAV calendars"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI" }]
license = { text = "MIT" }
dependencies = [
  "SQLAlchemy>=2,<3",
  "typer>=0.12,<1",
  "rich>=13,<15",
  "pydantic>=2.8,<3",
  "python-dotenv>=1,<2",
  "imapclient>=3,<4",
  "icalendar>=6,<8",
  "recurring-ical-events>=3,<4",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "mypy>=1.11,<2",
  "ruff>=0.6,<1",
]

[project.scripts]
proton-agent = "proton_agent_suite.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "live_bridge: requires a local Proton Mail Bridge instance",
  "live_radicale: requires a reachable CalDAV server",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
plugins = []
